wrapping up for today

--- a/htmlfiles/home_page.html
+++ b/htmlfiles/home_page.html
@@ -102,11 +102,19 @@
             display: flex; /* (1) */;
             justify-content: space-between; /* (2) or space-around or space-evenly */
         }
+        .workhistorycontainer {
+        }
         .jobdescription {
             width: 1000px;
             margin: auto;
             text-align: center;
         }
+        .skillscontainer {
+            border: 100px;
+            border-width: 5px;
+            border-style: double;
+        }
+
     </style>
  </head>
 
@@ -128,6 +136,7 @@
      </nav>
 
     <section class="workhistory">
+        <div class="workhistorycontainer">
         <a name="Work History"></a>
         <h2>Work History</h2>
         <img src="https://mms.businesswire.com/media/20230428005116/en/1777633/23/Upbound_Logo_black_on_white.jpg" alt="upbound_logo" id="upbound_logo"style="display: block; margin: auto;">
@@ -231,6 +240,11 @@
     <li>learned SQL to pull meaninful data out of datawarehouse to help inform key decisions for customer experience enhancement</li>
 </ul>
 </p>
+</div>
+<div class="skillscontainer">
+    <h3>skills</h3>
+    <p>here are my skill</p>
+</div>
     </section>
 
     <Section class="college">
