testing out div side bar menu

--- a/htmlfiles/workhistory.html
+++ b/htmlfiles/workhistory.html
@@ -1,44 +1,14 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChadLoiseau</title>
-    <script src="https://kit.fontawesome.com/22065692df.js" crossorigin="anonymous"></script>
+    <title>Work History</title>
     <style>
-        h1 {
-            text-align: center;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            color: black;
-        }
-        .header1 {
-            background-color: lightgrey;
-            text-emphasis-color: black;
-            color: black;
-            padding: 10px;
-            text-align: center;
-        }
-
-        #uvu_logo {
-            width: 100px;
-            margin: auto;
-        }
-        .uvu_logo_container {
-            text-align: center;
-            background-color: green;
-            padding-top: 5px;
-        }
-        .nav {
-            color: black;
-            font-family:'Times New Roman', Times, serif
-        }
-        .nav:hover {
-             background-color: white;
-        }
-        .navtop{
-            background-color: white;
-            text-align: center;
-        }
+        .jobdescription {
+        width: 1000px;
+        margin: auto;
+        text-align: center;}
         h2 {
             text-align: center;
         }
@@ -88,90 +58,11 @@
             padding: 0%;
             margin: 0%;
         }
-        #chadmain {
-            width: 200px;
-        }
-        .header_image{
-            text-align: center;
-        }
-        .fa-brands{
-            color: black;
-            margin: auto;
-        }
-        .socials{
-            display: flex; /* (1) */;
-            justify-content: space-between; /* (2) or space-around or space-evenly */
-        }
-        .jobdescription {
-            width: 1000px;
-            margin: auto;
-            text-align: center;
-        }
-        .skillscontainer {
-            border: 100px;
-            border-width: 5px;
-            border-style: double;
-            position: sticky;
-            nav-right: auto;
-            float: right;
-            display: block;
-            flex-grow: inherit;
-            height: 100vh;
-            overflow: hidden;
-            padding: 10px;
-            background-color: lightgrey;
-            z-index: 1;
-            width: auto;
-            margin-top: 0px;
-        }
-        .leftnav {
-            border: 100px;
-            border-width: 5px;
-            border-style: double;
-            position: sticky;
-            nav-right: auto;
-            float: left;
-            display: block;
-            flex-grow: inherit;
-            height: 100vh;
-            overflow: hidden;
-            padding: 10px;
-            background-color: lightgrey;
-            z-index: 1;
-            width: auto;
-            margin-top: 0px;
-            overflow-y: auto;
-        }
 
     </style>
- </head>
-
- <body>
-    <div class="header1">
-        <h1>Welcome to chadloiseau.com</h1>
-        <div class="header_image">
-        <img src="https://pbs.twimg.com/profile_images/1391428890606792705/WJC58Hbs_400x400.jpg" alt="chad" id="chadmain">
-        </div>
-        <h3>About me</h3>
-    <p>A product manager who excels in nurturing relationships while solving complex, multi-team problems presented by stakeholders to meet the growth expectations of executives. Efficiently maintains the planning, execution, and delivery. Experienced in web and mobile applications, requirement gathering, facilitating open communication & developing
-        agreeable compromises for all parties.</p>
-</div>
-<div class="skillscontainer"> <!--right aligned hopefully-->
-    <h3>skills</h3>
-    <p>here are my skills</p>
-</div>
-<div class="leftnav"> <!--left aligned hopefully-->
-    <h3>menu maybe</h3>
-    <p>should I put my menu here</p>
-</div>
-    <nav class="navtop">
-        <a class="nav" href="idealmenu.html">Ideal Menu</a>
-        <a class="nav"href="Family">My Family</a>
-        <a class="nav" href="workhistory.html">Work History</a>
-        <a class="nav"href="#College">College</a>
-     </nav>
-
-     <section class="workhistory">
+</head>
+<body>
+    <section class="workhistory">
         <div class="workhistorycontainer">
         <a name="Work History"></a>
         <h2>Work History</h2>
@@ -277,27 +168,6 @@
 </ul>
 </p>
 </div>
-    </section>
-
-    <Section class="college">
-        <a name ="College"></a>
-    <h2> College</h2>
-    <div class="uvu_logo_container">
-    <img src="https://www.uvu.edu/marketing/images/identity_logo_square.jpg" alt="uvu_logo" id="uvu_logo">
-    </div>
-    <p>Utah Valley University</br>
-    2012-2016</br>
-    GPA...No clue, if you are truly concerned about my college GPA from eight years ago, I don't want to work for your company </p>
 </Section>
-
-<section>
-    <h2>social links</h2>
-    <nav class="socials">
-        <a href="https://x.com/Chandy_Land12" target="_blank"><i class="fa-brands fa-x-twitter fa-10x"></i></a>
-        <a href="https://www.linkedin.com/in/chad-loiseau-56583493/" target="_blank"><i class="fa-brands fa-linkedin-in fa-10x"></i></a> 
-        <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-10x"></i></a>
-        <a href="mailto:chad.loiseau@gmail.com"><i class="fa-regular fa-envelope fa-10x" style="color: black;"></i></a>
-    </nav>
-</section>
 </body>
 </html>
