--- a/home page/home_page.html
+++ b/home page/home_page.html
@@ -4,150 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChadLoiseau</title>
+    <link rel="stylesheet" href="homePage.css">
     <script src="https://kit.fontawesome.com/22065692df.js" crossorigin="anonymous"></script>
-    <style>
-        h1 {
-            text-align: center;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            color: black;
-        }
-        .header1 {
-            background-color: lightgrey;
-            text-emphasis-color: black;
-            color: black;
-            padding: 10px;
-            text-align: center;
-        }
-
-        #uvu_logo {
-            width: 100px;
-            margin: auto;
-        }
-        .uvu_logo_container {
-            text-align: center;
-            background-color: green;
-            padding-top: 5px;
-        }
-        .nav {
-            color: black;
-            font-family:'Times New Roman', Times, serif
-        }
-        .nav:hover {
-             background-color: white;
-        }
-        .navtop{
-            background-color: white;
-            text-align: center;
-        }
-        h2 {
-            text-align: center;
-        }
-        .dates {
-            font-size: small;
-            text-align: center;
-        }
-        #upbound_logo {
-            width: 100px;
-            padding-bottom: 0%;
-            padding-left: 0cqmax;
-        }
-        ul {
-            width: auto;
-            text-align: center;
-            display: inline
-        }
-        p{
-            text-align: center;
-            margin: auto;
-        }
-        #acima_logo {
-            width: 100px;
-            padding-left: auto;
-
-        }
-        #zionsbank_logo {
-            width: 100px;
-            padding-bottom: -20px;
-            margin-bottom: -100px;
-        }
-        #storagecraft_logo {
-            width: 120px;
-        }
-        #kornerstone_logo {
-            width: 130px;
-            margin: auto;
-            padding-bottom: 10px;
-        }
-        .workhistory{
-            border: 20px;
-            border-width: 2px;
-            font-family: 'Courier New', Courier, monospace;
-        }
-        h3{
-            text-align: center;
-            padding: 0%;
-            margin: 0%;
-        }
-        #chadmain {
-            width: 200px;
-        }
-        .header_image{
-            text-align: center;
-        }
-        .fa-brands{
-            color: black;
-            margin: auto;
-        }
-        .socials{
-            display: flex; /* (1) */;
-            justify-content: space-between; /* (2) or space-around or space-evenly */
-        }
-        .jobdescription {
-            width: 1000px;
-            margin: auto;
-            text-align: center;
-        }
-        .skillscontainer {
-            border: 100px;
-            border-width: 5px;
-            border-style: double;
-            position: sticky;
-            nav-right: auto;
-            float: right;
-            display: block;
-            flex-grow: inherit;
-            height: 100vh;
-            overflow: hidden;
-            padding: 10px;
-            background-color: lightgrey;
-            z-index: 1;
-            width: auto;
-            margin-top: 0px;
-        }
-        .leftnav {
-            border: 100px;
-            border-width: 5px;
-            border-style: double;
-            position: sticky;
-            nav-right: auto;
-            float: left;
-            display: block;
-            flex-grow: inherit;
-            height: 100vh;
-            overflow: hidden;
-            padding: 10px;
-            background-color: lightgrey;
-            z-index: 1;
-            width: auto;
-            margin-top: 0px;
-            overflow-y: auto;
-        }
-
-    </style>
  </head>
 
  <body>
     <div class="header1">
+        <nav class="navtop">
+            <a class="nav" href="idealmenu.html">Ideal Menu</a>
+            <a class="nav"href="Family">My Family</a>
+            <a class="nav" href="workhistory.html">Work History</a>
+            <a class="nav"href="#College">College</a>
+            <a class="nav"href="feedbackform.html">Contact Me</a>
+         </nav>
         <h1>Welcome to chadloiseau.com</h1>
         <div class="header_image">
         <img src="https://pbs.twimg.com/profile_images/1391428890606792705/WJC58Hbs_400x400.jpg" alt="chad" id="chadmain">
@@ -164,15 +33,8 @@
     <h3>menu maybe</h3>
     <p>should I put my menu here</p>
 </div>
-    <nav class="navtop">
-        <a class="nav" href="idealmenu.html">Ideal Menu</a>
-        <a class="nav"href="Family">My Family</a>
-        <a class="nav" href="workhistory.html">Work History</a>
-        <a class="nav"href="#College">College</a>
-     </nav>
-
      <section class="workhistory">
-        <div class="workhistorycontainer">
+        <div id="body">
         <a name="Work History"></a>
         <h2>Work History</h2>
         <img src="https://mms.businesswire.com/media/20230428005116/en/1777633/23/Upbound_Logo_black_on_white.jpg" alt="upbound_logo" id="upbound_logo"style="display: block; margin: auto;">
@@ -289,6 +151,7 @@
     2012-2016</br>
     GPA...No clue, if you are truly concerned about my college GPA from eight years ago, I don't want to work for your company </p>
 </Section>
+ </div>
 
 <section>
     <h2>social links</h2>
