Expirementing with divs

--- a/home page/home_page.html
+++ b/home page/home_page.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChadLoiseau</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="homePage.css">
     <script src="https://kit.fontawesome.com/22065692df.js" crossorigin="anonymous"></script>
  </head>
@@ -162,5 +165,8 @@
         <a href="mailto:chad.loiseau@gmail.com"><i class="fa-regular fa-envelope fa-10x" style="color: black;"></i></a>
     </nav>
 </section>
+<div id="globalFooter">
+<p id="footer">Thank you for checking out my webiste!</p>
+</div>
 </body>
 </html>
