--- a/home page/feedbackform.html
+++ b/home page/feedbackform.html
@@ -9,6 +9,7 @@
 <body>
     <div class="header1">
         <nav class="navtop">
+            <a class="nav"href="home_page.html">Home</a>
             <a class="nav" href="idealmenu.html">Ideal Menu</a>
             <a class="nav"href="Family">My Family</a>
             <a class="nav" href="workhistory.html">Work History</a>
@@ -33,7 +34,7 @@
                 </br><label for="email">Email</label>
                 </br><input type="email" id="email"/>
                 </br><label for="message">Message</label>
-                </br><textarea rows="9" cols="80" name="message" id="message" placeholder="This  is where you type something nice about me or offer me a job!"></textarea>
+                </br><textarea rows="9" cols="85" name="message" id="message" placeholder="This  is where you type something nice about me or offer me a job!"></textarea>
             </form>   
         </div>
         <div id="submitButton">
