--- a/home page/feedbackform.html
+++ b/home page/feedbackform.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>email me page</title>
     <link rel="stylesheet" href="feedbackform.css">
+    <script src="https://kit.fontawesome.com/22065692df.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <div class="header1">
@@ -32,7 +34,7 @@
                 </br><label for="phoneNumber">Phone Number</label>
                 </br><input type="phone" id="phoneNumber" placeholder="###-###-####"/>
                 </br><label for="email">Email</label>
-                </br><input type="email" id="email"/>
+                </br><input type="email" id="email" placeholder="email"/>
                 </br><label for="message">Message</label>
                 </br><textarea rows="9" cols="85" name="message" id="message" placeholder="This  is where you type something nice about me or offer me a job!"></textarea>
             </form>   
