--- a/Heroimage/blockhomepage.html
+++ b/Heroimage/blockhomepage.html
@@ -13,21 +13,38 @@
             background-color: white;
             display: block;
             height: 1000px;
-            border-radius: 5%;
+            border-radius: 2em;
         }
-            .headerImage #chadFace{
-                width: 250px;
-            height: 250px;
-            border-radius: 50%;
+
+        #chadFace{
+            width: 25%;
+             height: auto;
+             border-radius: 50%;
+             float: right;
+            border-color: black;
+            border-width: 5px;
+            border-style: double;
+            margin: -3em;
+        }
+
+       @media only screen and (max-width: 600px){
+            #chadFace{
+                width: 25%;
+             height: auto;
+             border-radius: 50%;
+             float: right;
+            border-color: black;
+            border-width: 5px;
+            border-style: double;
+            margin: -1em;
+            }
         }
     </style>
 </head>
 <body>
     <div class="whiteBackground">
         <div class="header">
-            <div class="headerImage">
                 <img src="https://media.licdn.com/dms/image/C4E03AQEPbnPcas4S9w/profile-displayphoto-shrink_400_400/0/1517543077268?e=1726099200&v=beta&t=WKrJMwtU0L2mqJ7umtIgei771Eti3iPWA0754hCOje4" alt="ChadImage" id="chadFace">
-            </div>
         </div>
     </div>
 </body>
