--- a/Heroimage/blockhomepage.html
+++ b/Heroimage/blockhomepage.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>blockhomepage</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap" rel="stylesheet">
     <style>
         body{
             background-color: lightblue;
@@ -15,29 +18,76 @@
             height: 1000px;
             border-radius: 2em;
         }
+        .header{
+            display: inline;
+        }
 
         #chadFace{
             width: 25%;
-             height: auto;
-             border-radius: 50%;
-             float: right;
+            height: auto;
+            border-radius: 50%;
+            float: right;
             border-color: black;
             border-width: 5px;
             border-style: double;
             margin: -3em;
         }
+        #chadLoiseau{
+            max-width: 80%;
+            font-size: 5em;
+            text-align: center;
+            font-family: serif;
+            padding-top: .75em;
+            margin-bottom: .5em;
+        }
+        .header h2{
+            text-align: center;
+            font-family: serif;
+            margin-top: .5em;
+        }
+
+        .aboutMe{
+            width: 400px;
+            height: 400px;
+            border: 2px;
+            border-style: solid;
+            border-color: black;
+            text-align: center;
+        }
 
        @media only screen and (max-width: 600px){
             #chadFace{
-                width: 25%;
-             height: auto;
-             border-radius: 50%;
-             float: right;
-            border-color: black;
-            border-width: 5px;
-            border-style: double;
-            margin: -1em;
+                width: 30%;
+                height: auto;
+                border-radius: 50%;
+                float: right;
+                border-color: black;
+                border-width: 5px;
+                border-style: double;
+                margin: -1em;
             }
+            #chadLoiseau{
+                width: 80%;
+                font-size: 1em;
+                text-align: center;
+                font-family: serif;
+                padding-top: .75em;
+                float: middle;
+        }
+            .header h1{
+                text-align: center;
+                font-family: serif;
+                font-size: 1em;
+                padding-top: 0%;
+        }
+                .whiteBackground{
+            Margin: 2.5em;
+            background-color: white;
+            display: block;
+            height: 900px;
+            border-radius: 2em;
+        }
+
         }
     </style>
 </head>
@@ -45,6 +95,15 @@
     <div class="whiteBackground">
         <div class="header">
                 <img src="https://media.licdn.com/dms/image/C4E03AQEPbnPcas4S9w/profile-displayphoto-shrink_400_400/0/1517543077268?e=1726099200&v=beta&t=WKrJMwtU0L2mqJ7umtIgei771Eti3iPWA0754hCOje4" alt="ChadImage" id="chadFace">
+                <div>
+          <h1 id="chadLoiseau">Chad Loiseau</h1>
+          <h2>--Group Product Manager</h2>
+        </div>
+        </div>
+        <div class="aboutMe">
+            <p>A Group Product Manager with a passion for solving complex problems and
+                communicating across multi function partners and deep-diving into analytics.
+            </p>
         </div>
     </div>
 </body>
