--- a/HomepageLayout/blockhomepage.html
+++ b/HomepageLayout/blockhomepage.html
@@ -17,6 +17,7 @@
             display: block;
             height: auto;
             border-radius: 2em;
+            padding-bottom: 2em;
         }
         #chad{
             display: inline;
@@ -99,30 +100,6 @@
             animation-duration: 5s;
             animation-iteration-count: 1;
            }
-           /*@keyframes square {
-            0% {left: 0px; top:0px; transform: rotate(odeg);}
-            25% {left:200px; top:200px; transform: rotate (90deg);}
-            50% {left:200px; top:100px; transform: rotate(180deg); }
-            75% {left:100px; top:200px; transform: rotate (260deg);}
-            100% {left:0px; top:0px; }
-           }
-           */
-           #number{
-            animation-name: reveal;
-            animation-duration: 3s;
-            animation-delay: 10s;
-            font-size: 1em;
-           }
-           @keyframes reveal {
-            0% {transform: scale(0);}
-            25% {transform: scale(0);}
-            50% {transform: scale(0);}
-            75% {transform: scale(0);}
-            85% {transform: scale(0);}
-            95% {transform: scale(0);}
-            99% {transform: scale(0);}
-            100% {transform: scale(200%);}
-           }
 
        @media only screen and (max-width: 600px){
             #chadFace{
@@ -136,18 +113,10 @@
                 margin: -1em;
             }
             #chadLoiseau{
-                width: 80%;
-                font-size: 1em;
+                width: 85%;
+                font-size: 3em;
                 text-align: center;
                 font-family: serif;
-                padding-top: .75em;
-                float: middle;
-        }
-            .header h1{
-                text-align: center;
-                font-family: serif;
-                font-size: 1em;
-                padding-top: 0%;
         }
                 .whiteBackground{
             Margin: 2.5em;
@@ -164,11 +133,51 @@
             }
         }
         }
-
+        @media only screen and (min-width: 1450px){
+            body{
+                justify-content: center;
+            }
+            #chadFace{
+                width: 20%;
+                height: auto;
+                border-radius: 50%;
+                float: right;
+                border-color: black;
+                border-width: 5px;
+                border-style: double;
+                padding-left: -10em;
+            }
+            #chadLoiseau{
+                width: 80%;
+                font-size: 3em;
+                text-align: center;
+                font-family: serif;
+                padding-top: .75em;
+                float: middle;
+        }
+        }
+            .whiteBackground{
+            Margin: 2.5em;
+            background-color: white;
+            width: 80%;
+            height: auto;
+            border-radius: 2em;
+            justify-content: center;
+                }
+            .aboutMe {
+            width: 89%;
+            padding: 1px;
+            text-align: left;
+            text-wrap: wrap;
+            }
         h1{
             font-size: 3em;
             text-align: center;
             display: block;
+        }
+
+        .globalFooter {
+            text-align: right;
         }
     </style>
 </head>
@@ -213,17 +222,10 @@
                 roadmaps, or just chatting about the latest game releases, I'm always up for a stimulating 
                 conversation. Feel free to reach out — let's create something amazing together!</p>
         </div>
-    </div>
-    </br>
-        <div class="dice">
-            <p id="number">3</p>
+        </div>
         </div>
         <div class="globalFooter">
-            <script class="script">
-                document.write("<h1>Hello World</h1>");
-            </script>
+            <p>CHAD INC</p>
         </div>
-    </div>
-    </div>
 </body>
 </html>
