working on global footer and file organization

--- a/HomepageLayout/blockhomepage.html
+++ b/HomepageLayout/blockhomepage.html
@@ -177,7 +177,17 @@
         }
 
         .globalFooter {
-            text-align: right;
+            display: inline;
+        }
+        .footerNav{
+            text-align: center;
+            width: 100%;
+            height: 2em;
+            vertical-align: middle;
+        }
+        .chadFoot{
+            float: right;
+            margin-top: -1em;
         }
     </style>
 </head>
@@ -225,7 +235,12 @@
         </div>
         </div>
         <div class="globalFooter">
-            <p>CHAD INC</p>
+            <div class="chadFoot"><p>CHAD INC</p></div>
+            <div class="footerNav">
+                <a href="/resume/workhistory.html">Resume</a>
+                <a href="/homepage/feedbackform.html">feedback</a>
+                <a href="/homepage/idealmenu.html">Ideal Menu</a>
+            </div>
         </div>
 </body>
 </html>
