work history and home page adjustments

--- a/resume/blockHistory.html
+++ b/resume/blockHistory.html
@@ -37,25 +37,31 @@
             padding-right: 80%;
         }
         #zionsbank_logo {
-            width: 100px;
+            width: 20%;
+            padding-right: 80%;
             padding-bottom: -20px;
             margin-bottom: -100px;
         }
         #storagecraft_logo {
-            width: 120px;
+            width: 20%;
+            padding-right: 80%;
         }
         #kornerstone_logo {
-            width: 130px;
+            width: 20%;
+            padding-right: 80%;
             margin: auto;
             padding-bottom: 10px;
         }
         #acima_logo {
-            width: 100px;
-            padding-left: auto;
+            width: 20%;
+            padding-right: 80%;
 
         }
         section{
-            border: 2px solid brown;
+            border-bottom: 2px dotted gray;
+            padding-top: 1em;
+            padding-left: 2em;
+            padding-right: 4em;
         }
         .linkedinSection{
             text-align: center;
@@ -63,14 +69,37 @@
         .linkedinSection a{
             color: black;
         }
-        .upbound{
-            text-align: left;
-        }
-        .upbound img{
-            align-content: left;
-        }
         .businessLogo img{
             align-items: left;
+        }
+
+        h3{
+            margin-top: 0%;
+        }
+        h1 {
+            margin-bottom: 0%;
+        }
+
+        @media only screen and (max-width: 600px) {
+        #upbound_logo {
+            width: 80%;
+        }
+        #zionsbank_logo {
+            width: 100%;
+        }
+        #storagecraft_logo {
+            width: 100%;
+        }
+        #kornerstone_logo {
+            width: 100%;
+        }
+        #acima_logo {
+            width: 100%;
+        }
+        section{
+            padding-right: 1em;
+            padding-right: 1em;
+        }
         }
 
     </style>
@@ -132,7 +161,7 @@
         </p>
         </section>
         <section class="zionsBank">
-        <img src="https://cdn.freebiesupply.com/logos/large/2x/zions-bank-logo-png-transparent.png" alt="zions_bank" id="zionsbank_logo" style="display: block; margin: auto;">
+        <img src="https://brightspotcdn.byu.edu/dims4/default/b575ffb/2147483647/strip/true/crop/400x400+0+0/resize/400x400!/quality/90/?url=https%3A%2F%2Fbrigham-young-brightspot.s3.amazonaws.com%2Fbc%2Fc1%2F2f71961f4eafa1c32b66d64e0459%2Fzions-bank.png" alt="zions_bank" id="zionsbank_logo" style="display: block; margin: auto;">
         <h3>Senior Project Manager: Automation Core</h3>
         <p class="dates">May 2020 - August 2021 (1 year 4 months)</p>
         <div class="jobdescription">
@@ -190,6 +219,8 @@
 <section class="linkedinSection">
     <p>check my linkedin for my full work history</p>
     <a href="https://www.linkedin.com/in/chad-loiseau-56583493/" id="linkedin"><i class="fa-brands fa-linkedin-in fa-10x black"></i></a>
+</br> 
+    <a href="/HomepageLayout/blockhomepage.html">Return Home</a>
 </section>
     </div>
     </div>
