--- a/HomepageLayout/blockhomepage.html
+++ b/HomepageLayout/blockhomepage.html
@@ -10,17 +10,14 @@
     <style>
         body{
             background-color: lightblue;
+            text-align: center;
         }
         .whiteBackground{
             Margin: 4em;
             background-color: white;
-            display: block;
             height: auto;
             border-radius: 2em;
             padding-bottom: 2em;
-        }
-        #chad{
-            display: inline;
         }
 
         #chadFace{
@@ -69,6 +66,7 @@
             border-color: black;
             text-align: left;
             font-family: serif;
+            padding-bottom: 3em;
            }
 
            .aboutMe h3{
@@ -176,6 +174,50 @@
             display: block;
         }
 
+        .workPromotion{
+            width: 100%;
+            height: 400px;
+            border: 3px dotted blue;
+            display: inline;
+            margin-bottom: 3em;
+            margin-top: 3em;
+            align-items: center;
+        }
+        .workPromotionTextLeft{
+            display: block;
+            order: 1;
+            border: 2px dotted gray;
+            text-align: center;
+            width: 50%;
+            align-content: center;
+            justify-content: center;
+        }
+        .workPromotionTextRight{
+            display: block;
+            width: 50%;
+            order: 2;
+            border: 2px dotted gray;
+            text-align: right;
+        }
+        .workHistoryButton1{
+            display: block;
+            width: 100%;
+            align-content: center;
+            padding-left: 10%;
+        }
+        .workHistory{
+        display: block;
+        width: 40ch;
+        height: 4em;
+        background-color: orangered;
+        color: white;
+        align-items: center;
+        }
+        .workHistory:hover{
+        background-color: blue;
+        text-align: right;
+    }
+
         .globalFooter {
             display: inline;
         }
@@ -188,6 +230,11 @@
         .chadFoot{
             float: right;
             margin-top: -1em;
+        }
+        .container{
+            display: block;
+            width: 150px;
+            margin: 0 auto;
         }
     </style>
 </head>
@@ -233,6 +280,20 @@
                 conversation. Feel free to reach out — let's create something amazing together!</p>
         </div>
         </div>
+        <div class = "workPromotion">
+            <div class ="workPromotionTextLeft">
+                <div class="workHistoryButton">
+                    <button class="workHistory"><a href="/resume/blockHistory.html">Work History</a></button>
+                </div>
+            </div>
+                <div class ="workPromotionTextRight">
+                    <div class="workHistoryButton1">
+                        <button class="workHistory"><a href="/resume/blockHistory.html">Work History</a></button>
+                    </div>
+        </div>
+        </div>
+        <div id="container">
+            <button>test shitty button</button>
         </div>
         <div class="globalFooter">
             <div class="chadFoot"><p>CHAD INC</p></div>
